js/js.translator/testData/incremental/invalidation/transitiveInlineFunctionWithCrossModuleInliner/lib1/l1.1.kt
inline fun foo() = 33
